# LibrePCB

./: CMakeLists.txt
ci/: azure-pipelines.yml
cmake/: FindDelaunayTriangulation.cmake  FindMuParser.cmake  FindQuaZip.cmake  FindSexpresso.cmake  Findtype_safe.cmake
libs/librepcb/common/: CMakeLists.txt  uuid.h  version.h
libs/librepcb/common/fileio/: serializablekeyvaluemap.h  transactionalfilesystem.cpp
libs/librepcb/common/network/: filedownload.cpp
libs/librepcb/libraryeditor/newelementwizard/: newelementwizardcontext.cpp
libs/librepcb/libraryeditor/pkg/dialogs/: footprintpadpropertiesdialog.cpp
libs/librepcb/libraryeditor/pkg/fsm/: packageeditorstate_addpads.cpp
libs/librepcb/libraryeditor/pkg/widgets/: packagepadcombobox.cpp
libs/librepcb/project/: CMakeLists.txt
libs/librepcb/project/boards/items/: bi_footprint.cpp  bi_footprintpad.h
libs/librepcb/projecteditor/: CMakeLists.txt
libs/librepcb/projecteditor/boardeditor/fsm/: boardeditorstate_addstroketext.cpp  boardeditorstate_addvia.cpp  boardeditorstate_drawpolygon.cpp  boardeditorstate_drawtrace.cpp  boardeditorstate_select.cpp
