find_package(Qt5 5.2.0 COMPONENTS Widgets OpenGL Network Sql PrintSupport REQUIRED)

find_package(TypeSafe REQUIRED)
find_package(DelaunayTriangulation REQUIRED)
find_package(Optional REQUIRED)
find_package(Sexpresso REQUIRED)

# Export library
add_library(librepcb_common
    # Forms
    dialogs/aboutdialog.ui
    dialogs/boarddesignrulesdialog.ui
    dialogs/circlepropertiesdialog.ui
    dialogs/gridsettingsdialog.ui
    dialogs/holepropertiesdialog.ui
    dialogs/polygonpropertiesdialog.ui
    dialogs/stroketextpropertiesdialog.ui
    dialogs/textpropertiesdialog.ui
    widgets/alignmentselector.ui

    # Sources
    algorithm/airwiresbuilder.cpp
    alignment.cpp
    application.cpp
    attributes/attribute.cpp
    attributes/attributelistmodel.cpp
    attributes/attributeprovider.cpp
    attributes/attributesubstitutor.cpp
    attributes/attributetype.cpp
    attributes/attributeunit.cpp
    attributes/attrtypecapacitance.cpp
    attributes/attrtypecurrent.cpp
    attributes/attrtypefrequency.cpp
    attributes/attrtypeinductance.cpp
    attributes/attrtypepower.cpp
    attributes/attrtyperesistance.cpp
    attributes/attrtypestring.cpp
    attributes/attrtypevoltage.cpp
    attributes/cmd/cmdattributeedit.cpp
    boarddesignrules.cpp
    bom/bom.cpp
    bom/bomcsvwriter.cpp
    cam/excellongenerator.cpp
    cam/gerberaperturelist.cpp
    cam/gerbergenerator.cpp
    debug.cpp
    dialogs/aboutdialog.cpp
    dialogs/boarddesignrulesdialog.cpp
    dialogs/circlepropertiesdialog.cpp
    dialogs/filedialog.cpp
    dialogs/gridsettingsdialog.cpp
    dialogs/holepropertiesdialog.cpp
    dialogs/polygonpropertiesdialog.cpp
    dialogs/stroketextpropertiesdialog.cpp
    dialogs/textpropertiesdialog.cpp
    exceptions.cpp
    fileio/asynccopyoperation.cpp
    fileio/csvfile.cpp
    fileio/directorylock.cpp
    fileio/filepath.cpp
    fileio/fileutils.cpp
    fileio/sexpression.cpp
    fileio/transactionaldirectory.cpp
    fileio/transactionalfilesystem.cpp
    fileio/versionfile.cpp
    font/strokefont.cpp
    font/strokefontpool.cpp
    geometry/circle.cpp
    geometry/cmd/cmdcircleedit.cpp
    geometry/cmd/cmdholeedit.cpp
    geometry/cmd/cmdpolygonedit.cpp
    geometry/cmd/cmdstroketextedit.cpp
    geometry/cmd/cmdtextedit.cpp
    geometry/hole.cpp
    geometry/junction.cpp
    geometry/netlabel.cpp
    geometry/netline.cpp
    geometry/path.cpp
    geometry/pathmodel.cpp
    geometry/polygon.cpp
    geometry/stroketext.cpp
    geometry/text.cpp
    geometry/trace.cpp
    geometry/vertex.cpp
    geometry/via.cpp
    graphics/circlegraphicsitem.cpp
    graphics/defaultgraphicslayerprovider.cpp
    graphics/graphicslayer.cpp
    graphics/graphicsscene.cpp
    graphics/graphicsview.cpp
    graphics/holegraphicsitem.cpp
    graphics/linegraphicsitem.cpp
    graphics/origincrossgraphicsitem.cpp
    graphics/polygongraphicsitem.cpp
    graphics/primitivecirclegraphicsitem.cpp
    graphics/primitivepathgraphicsitem.cpp
    graphics/primitivetextgraphicsitem.cpp
    graphics/stroketextgraphicsitem.cpp
    graphics/textgraphicsitem.cpp
    gridproperties.cpp
    model/angledelegate.cpp
    model/comboboxdelegate.cpp
    model/lengthdelegate.cpp
    model/sortfilterproxymodel.cpp
    network/filedownload.cpp
    network/networkaccessmanager.cpp
    network/networkrequest.cpp
    network/networkrequestbase.cpp
    network/repository.cpp
    pnp/pickplacecsvwriter.cpp
    pnp/pickplacedata.cpp
    signalrole.cpp
    sqlitedatabase.cpp
    systeminfo.cpp
    toolbox.cpp
    undocommand.cpp
    undocommandgroup.cpp
    undostack.cpp
    units/angle.cpp
    units/length.cpp
    units/lengthunit.cpp
    units/point.cpp
    units/ratio.cpp
    utils/clipperhelpers.cpp
    utils/exclusiveactiongroup.cpp
    utils/graphicslayerstackappearancesettings.cpp
    utils/mathparser.cpp
    utils/toolbarproxy.cpp
    utils/undostackactiongroup.cpp
    uuid.cpp
    version.cpp
    widgets/alignmentselector.cpp
    widgets/angleedit.cpp
    widgets/attributelisteditorwidget.cpp
    widgets/attributetypecombobox.cpp
    widgets/attributeunitcombobox.cpp
    widgets/centeredcheckbox.cpp
    widgets/doublespinbox.cpp
    widgets/editabletablewidget.cpp
    widgets/graphicslayercombobox.cpp
    widgets/halignactiongroup.cpp
    widgets/lengthedit.cpp
    widgets/lengtheditbase.cpp
    widgets/numbereditbase.cpp
    widgets/patheditorwidget.cpp
    widgets/plaintextedit.cpp
    widgets/positivelengthedit.cpp
    widgets/ratioedit.cpp
    widgets/signalrolecombobox.cpp
    widgets/statusbar.cpp
    widgets/tabwidget.cpp
    widgets/unsignedlengthedit.cpp
    widgets/unsignedratioedit.cpp
    widgets/valignactiongroup.cpp
    #
    #    # Resources TODO
    #    ../../../img/images.qrc
)
target_include_directories(librepcb_common PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(librepcb_common
    Qt::Widgets
    Qt::OpenGL
    Qt::Network
    Qt::Sql
    Qt::PrintSupport
    TypeSafe::TypeSafe
    DelaunayTriangulation::DelaunayTriangulation
    Optional::Optional
    Sexpresso::Sexpresso
)
